Fixing scrollbar in nav.

--- a/src/style.scss
+++ b/src/style.scss
@@ -34,6 +34,10 @@ html, body {
     left: 0;
 }
 
+#playground-log-container {
+  overflow: hidden;
+}
+
 #playground-logo {
   line-height: 1.75;
 }
